--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
                <h4>R$60 gourmet</h4>
             </div>
          </div>
+         <p class="author">
+            Design by
+            <a
+               href="https://www.linkedin.com/in/milton-boos-junior/"
+               target="_blank"
+               >Milton Boos Junior</a
+            >
+         </p>
       </div>
    </body>
    <script>
