--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
       <title>Docinhos da Lay</title>
       <link rel="stylesheet" href="./styles.css" />
       <link rel="preconnect" href="https://fonts.gstatic.com" />
-      <link
-         href="https://fonts.googleapis.com/css2?family=Redressed&display=swap"
-         rel="stylesheet"
-      />
       <link rel="preconnect" href="https://fonts.gstatic.com" />
       <link
-         href="https://fonts.googleapis.com/css2?family=Redressed&family=Roboto&display=swap"
+         href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Redressed&family=Roboto&display=swap"
          rel="stylesheet"
       />
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
