--- a/index.html
+++ b/index.html
@@ -34,25 +34,37 @@
          </div>
       </div>
       <div class="catalogo-container">
-         <h1 class="title" data-aos="slide-up"><label>C</label>atálogo</h1>
+         <h1 class="title" data-aos="slide-up">Sabores</h1>
          <div class="product" data-aos="slide-right">
             <img src="./assets/image1.png" alt="" />
             <div class="text-container">
-               <h3>Cento de Brigadeiro e</h3>
-               <h3>Explosão verde</h3>
+               <h3>Tradicionais</h3>
                <hr />
-               <h4>R$55 + Frete</h4>
+               <div class="desc-container">
+                  <h4>Café</h4>
+                  <h4>Beijinho</h4>
+                  <h4>Brigadeiro</h4>
+               </div>
             </div>
          </div>
          <div class="product reverse" data-aos="slide-left">
             <img src="./assets/image2.png" alt="" />
             <div class="text-container">
-               <h3>Marmitinhas com 9</h3>
-               <h3>18g cada</h3>
+               <h3>Especiais</h3>
                <hr />
-               <h4>R$10 tradicionais</h4>
-               <h4>R$12 especiais</h4>
-               <h4>R$14 gourmet</h4>
+               <h4>Oreo</h4>
+               <h4>7 Belo</h4>
+               <h4>Passatempo</h4>
+            </div>
+         </div>
+         <div class="product" data-aos="slide-right">
+            <img src="./assets/image3.png" alt="" />
+            <div class="text-container">
+               <h3>Gourmet</h3>
+               <hr />
+               <h4>Explosão verde</h4>
+               <h5>(ninho com uva verde s/ semente</h5>
+               <h4>Mousse de maracujá</h4>
             </div>
          </div>
          <div class="product" data-aos="slide-right">
@@ -64,6 +76,17 @@
                <h4>R$40 tradicionais</h4>
                <h4>R$50 especiais</h4>
                <h4>R$60 gourmet</h4>
+            </div>
+         </div>
+         <div class="product reverse" data-aos="slide-left">
+            <img src="./assets/image2.png" alt="" />
+            <div class="text-container">
+               <h3>Marmitinhas com 9</h3>
+               <h3>18g cada</h3>
+               <hr />
+               <h4>R$10 tradicionais</h4>
+               <h4>R$12 especiais</h4>
+               <h4>R$14 gourmet</h4>
             </div>
          </div>
          <p class="author">
