added delivery and payment cards

--- a/index.html
+++ b/index.html
@@ -34,59 +34,120 @@
          </div>
       </div>
       <div class="catalogo-container">
-         <h1 class="title" data-aos="slide-up">Sabores</h1>
-         <div class="product" data-aos="slide-right">
-            <img src="./assets/image1.png" alt="" />
-            <div class="text-container">
-               <h3>Tradicionais</h3>
-               <hr />
-               <div class="desc-container">
-                  <h4>Café</h4>
-                  <h4>Beijinho</h4>
-                  <h4>Brigadeiro</h4>
+         <!-- <h1 class="title" data-aos="slide-up">Sabores</h1> -->
+         <h1 class="title">Sabores</h1>
+         <div class="sabores-container">
+            <!-- <div class="product" data-aos="slide-right"> -->
+            <div class="product">
+               <img src="./assets/image1.png" alt="" />
+               <div class="text-container">
+                  <h3>Tradicionais</h3>
+                  <hr />
+                  <div class="desc-container">
+                     <ul>
+                        <li><h4>Café</h4></li>
+                        <li><h4>Beijinho</h4></li>
+                        <li><h4>Brigadeiro</h4></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+            <!-- <div class="product" data-aos="slide-left"> -->
+            <div class="product">
+               <img src="./assets/image2.png" alt="" />
+               <div class="text-container">
+                  <h3>Especiais</h3>
+                  <hr />
+                  <div class="desc-container">
+                     <ul>
+                        <li><h4>Oreo</h4></li>
+                        <li><h4>7 Belo</h4></li>
+                        <li><h4>Passatempo</h4></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+            <!-- <div class="product" data-aos="slide-right"> -->
+            <div class="product">
+               <img src="./assets/image3.png" alt="" />
+               <div class="text-container">
+                  <h3>Gourmet</h3>
+                  <hr />
+                  <div class="desc-container">
+                     <ul>
+                        <li><h4>Explosão verde</h4></li>
+                        <h5>(ninho com uva verde s/ semente)</h5>
+                        <li><h4>Mousse de maracujá</h4></li>
+                     </ul>
+                  </div>
                </div>
             </div>
          </div>
-         <div class="product reverse" data-aos="slide-left">
-            <img src="./assets/image2.png" alt="" />
-            <div class="text-container">
-               <h3>Especiais</h3>
-               <hr />
-               <h4>Oreo</h4>
-               <h4>7 Belo</h4>
-               <h4>Passatempo</h4>
-            </div>
-         </div>
-         <div class="product" data-aos="slide-right">
-            <img src="./assets/image3.png" alt="" />
-            <div class="text-container">
-               <h3>Gourmet</h3>
-               <hr />
-               <h4>Explosão verde</h4>
-               <h5>(ninho com uva verde s/ semente</h5>
-               <h4>Mousse de maracujá</h4>
-            </div>
-         </div>
-         <div class="product" data-aos="slide-right">
-            <img src="./assets/image3.png" alt="" />
-            <div class="text-container">
-               <h3>Centos - 12g cada</h3>
-               <h3>(até 2 sabores)</h3>
-               <hr />
-               <h4>R$40 tradicionais</h4>
-               <h4>R$50 especiais</h4>
-               <h4>R$60 gourmet</h4>
-            </div>
-         </div>
-         <div class="product reverse" data-aos="slide-left">
+         <h1 class="title">Preços</h1>
+         <div class="product" data-aos="slide-left">
             <img src="./assets/image2.png" alt="" />
             <div class="text-container">
                <h3>Marmitinhas com 9</h3>
                <h3>18g cada</h3>
                <hr />
-               <h4>R$10 tradicionais</h4>
-               <h4>R$12 especiais</h4>
-               <h4>R$14 gourmet</h4>
+               <div class="desc-container">
+                  <h4>R$10 tradicionais</h4>
+                  <h4>R$12 especiais</h4>
+                  <h4>R$14 gourmet</h4>
+               </div>
+            </div>
+         </div>
+         <div class="product reverse" data-aos="slide-right">
+            <img src="./assets/image3.png" alt="" />
+            <div class="text-container">
+               <h3>Centos - 12g cada</h3>
+               <h3>(até 2 sabores)</h3>
+               <hr />
+               <div class="desc-container">
+                  <h4>R$40 tradicionais</h4>
+                  <h4>R$50 especiais</h4>
+                  <h4>R$60 gourmet</h4>
+               </div>
+            </div>
+         </div>
+         <div class="special-info">
+            <div class="delivery">
+               <h1 class="title">Entregas</h1>
+               <h3>Todos os dias na Ronda até as 23h</h3>
+               <br />
+               <h3>
+                  Segundas, Quartas, Sextas e Sábados (apenas sob ocasiões
+                  especiais) das 13h às 19h
+               </h3>
+               <ul>
+                  <li>Grátis</li>
+                  <ul>
+                     <li>Shopping Palladium até as 23h</li>
+                  </ul>
+                  <br />
+                  <li>R$ 5,00</li>
+                  <ul>
+                     <li>Centro</li>
+                     <li>Órfãs</li>
+                     <li>Oficinas</li>
+                     <li>Jardim Carvalho</li>
+                  </ul>
+                  <br />
+                  <li>R$ 10,00</li>
+                  <ul>
+                     <li>Outros</li>
+                  </ul>
+               </ul>
+            </div>
+            <div class="payment">
+               <h1 class="title">Pagamento</h1>
+               <ul>
+                  <li><h3>Dinheiro</h3></li>
+                  <li><h3>Cartão de crédito (via picpay)</h3></li>
+                  <li><h3>Cartão de débito (via picpay)</h3></li>
+                  <li><h3>Transferências bancárias: Caixa, BB e Nubank</h3></li>
+                  <li><h3>Picpay: layla.goncalves5</h3></li>
+               </ul>
             </div>
          </div>
          <p class="author">
