added aos animation

--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
          </div>
       </div>
       <div class="catalogo-container">
-         <!-- <h1 class="title" data-aos="slide-up">Sabores</h1> -->
-         <h1 class="title">Sabores</h1>
+         <h1 class="title" ddata-aos="fade-up">Sabores</h1>
          <div class="sabores-container">
-            <!-- <div class="product" data-aos="slide-right"> -->
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                <img src="./assets/flavours/tradicionais.png" />
                <div class="text-container">
                   <h3>Tradicionais</h3>
@@ -52,8 +50,7 @@
                   </div>
                </div>
             </div>
-            <!-- <div class="product" data-aos="slide-left"> -->
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                <img src="./assets/flavours/especiais.png" alt="" />
                <div class="text-container">
                   <h3>Especiais</h3>
@@ -67,8 +64,7 @@
                   </div>
                </div>
             </div>
-            <!-- <div class="product" data-aos="slide-right"> -->
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                <img src="./assets/flavours/gourmet.png" alt="" />
                <div class="text-container">
                   <h3>Gourmet</h3>
@@ -83,7 +79,7 @@
                </div>
             </div>
          </div>
-         <h1 class="title">Preços</h1>
+         <h1 class="title" data-aos="fade-up">Preços</h1>
          <div class="product" data-aos="slide-left">
             <img src="./assets/image2.png" alt="" />
             <div class="text-container">
@@ -111,7 +107,7 @@
             </div>
          </div>
          <div class="special-info">
-            <div class="delivery">
+            <div class="delivery" data-aos="fade-up">
                <h1 class="title">Entregas</h1>
                <h3>Todos os dias na Ronda até as 23h</h3>
                <br />
@@ -139,7 +135,7 @@
                   </ul>
                </ul>
             </div>
-            <div class="payment">
+            <div class="payment" data-aos="fade-up">
                <h1 class="title">Pagamento</h1>
                <ul>
                   <li><h3>Dinheiro</h3></li>
@@ -150,8 +146,8 @@
                </ul>
             </div>
          </div>
-         <h1 class="title">Higiene</h1>
-         <div class="hygiene">
+         <h1 class="title" data-aos="fade-up">Higiene</h1>
+         <div class="hygiene" data-aos="fade-up">
             <div class="mySlides fade">
                <div class="numbertext">1 / 4</div>
                <img src="./assets/hygiene/image1.jpg" style="width: 100%" />
