--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                <ul>
                   <li>Grátis</li>
                   <ul>
-                     <li>Shopping Palladium até as 23h</li>
+                     <li>Shopping Palladium até as 19h</li>
                   </ul>
                   <br />
                   <li>R$ 5,00</li>
@@ -129,7 +129,7 @@
                      <li>Jardim Carvalho</li>
                   </ul>
                   <br />
-                  <li>R$ 10,00</li>
+                  <li>Combinar via whatsapp</li>
                   <ul>
                      <li>Outros</li>
                   </ul>
