added new infos

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                   <hr />
                   <div class="desc-container">
                      <ul>
-                        <li><h4>Café</h4></li>
                         <li><h4>Beijinho</h4></li>
                         <li><h4>Brigadeiro</h4></li>
+                        <li><h4>Café cremoso</h4></li>
                      </ul>
                   </div>
                </div>
@@ -60,6 +60,7 @@
                         <li><h4>Oreo</h4></li>
                         <li><h4>7 Belo</h4></li>
                         <li><h4>Passatempo</h4></li>
+                        <li><h4>Bem-Casado</h4></li>
                      </ul>
                   </div>
                </div>
@@ -73,6 +74,7 @@
                      <ul>
                         <li><h4>Explosão verde</h4></li>
                         <h5>(ninho com uva verde s/ semente)</h5>
+                        <li><h4>Torta de limão</h4></li>
                         <li><h4>Mousse de maracujá</h4></li>
                      </ul>
                   </div>
@@ -81,6 +83,19 @@
          </div>
          <h1 class="title" data-aos="fade-up">Preços</h1>
          <div class="product" data-aos="slide-left">
+            <img src="./assets/image1.png" alt="" />
+            <div class="text-container">
+               <h3>Valor Unitário</h3>
+               <h3>18g</h3>
+               <hr />
+               <div class="desc-container">
+                  <h4>R$1 tradicionais</h4>
+                  <h4>R$1,50 especiais</h4>
+                  <h4>R$1,75 gourmet</h4>
+               </div>
+            </div>
+         </div>
+         <div class="product reverse" data-aos="slide-right">
             <img src="./assets/image2.png" alt="" />
             <div class="text-container">
                <h3>Marmitinhas com 9</h3>
@@ -93,7 +108,7 @@
                </div>
             </div>
          </div>
-         <div class="product reverse" data-aos="slide-right">
+         <div class="product" data-aos="slide-left">
             <img src="./assets/image3.png" alt="" />
             <div class="text-container">
                <h3>Centos - 12g cada</h3>
@@ -106,6 +121,30 @@
                </div>
             </div>
          </div>
+      </div>
+      <div class="additional-info">
+         <h1 class="title">Adicionais</h1>
+         <ul>
+            <li>
+               Os valores neste cardápio valem para 2 sabores cada bandejinha ou
+               cento, mais sabores, orçar via whatsapp!
+            </li>
+            <li>
+               No caso de sabores fora da mesma categoria (Tradicional /
+               Especial / Gourmet), o preço prevalecerá o de maior valor.
+            </li>
+            <li>
+               Para doces decorados, em datas festivas, adiciona-se uma taxa de
+               5 reais no cento, eles virão com forminha, plástico de enfeite e
+               topos.
+            </li>
+            <li>
+               Pode-se alterar os confeitos, cor dos brigadeiros e forminhas /
+               plásticos de enfeite.
+            </li>
+         </ul>
+      </div>
+      <div class="catalogo-container">
          <div class="special-info">
             <div class="delivery" data-aos="fade-up">
                <h1 class="title">Entregas</h1>
@@ -207,6 +246,7 @@
                >Milton Boos Junior</a
             >
          </p>
+         <br />
       </div>
    </body>
    <script>
