added aos and fixed overflow

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
          </div>
       </div>
       <div class="additional-info">
-         <h1 class="title">Adicionais</h1>
-         <ul>
+         <h1 class="title" data-aos="fade-up">Adicionais</h1>
+         <ul data-aos="fade-up">
             <li>
                Os valores neste cardápio valem para 2 sabores cada bandejinha ou
                cento, mais sabores, orçar via whatsapp!
