added whatsapp link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
          </h1>
          <h2 data-aos="zoom-out">Encomende já!</h2>
          <div class="social-media" data-aos="fade-up-left">
-            <img src="./assets/whatsapp.svg" alt="" class="social-icon" />
+            <a
+               href="https://api.whatsapp.com/send?phone=554299990424&text=Ol%C3%A1%2C+quero+encomendar+alguns+docinhos%21"
+               target="_blank"
+            >
+               <img src="./assets/whatsapp.svg" alt="" class="social-icon" />
+            </a>
+
             <a href="https://instagram.com/re.lay.table" target="_blank">
                <img src="./assets/instagram.svg" alt="" class="social-icon" />
             </a>
