--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                   <h4>R$1 tradicionais</h4>
                   <h4>R$1,50 especiais</h4>
                   <h4>R$1,75 gourmet</h4>
+                  <h4>R$2,00 0% lactose</h4>
                </div>
             </div>
          </div>
@@ -147,6 +148,9 @@
             <li>
                Pode-se alterar os confeitos, cor dos brigadeiros e forminhas /
                plásticos de enfeite.
+            </li>
+            <li>
+               Para cento 0% lactose há desconto! Informar-se via whatsapp.
             </li>
          </ul>
       </div>
